// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label horizontal layout render label only 1`] = `
<body>
  <div>
    <div
      class="itemRowContainer"
    >
      <div
        class="labelsContainer horizontalContainer"
      >
        <span
          class="primaryLabel"
        >
          Some Label
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`Label horizontal layout render label only and danger 1`] = `
<body>
  <div>
    <div
      class="itemRowContainer"
    >
      <div
        class="labelsContainer horizontalContainer"
      >
        <span
          class="primaryLabel danger"
        >
          Some Label
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`Label horizontal layout render with danger and secondaryLabel 1`] = `
<body>
  <div>
    <div
      class="itemRowContainer"
    >
      <div
        class="labelsContainer horizontalContainer"
      >
        <span
          class="primaryLabel danger"
        >
          Some Label
        </span>
        <span
          class="secondaryLabel danger"
        >
          ·
        </span>
        <span
          class="secondaryLabel danger"
        >
          Secondary Label
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`Label horizontal layout render with secondaryLabel 1`] = `
<body>
  <div>
    <div
      class="itemRowContainer"
    >
      <div
        class="labelsContainer horizontalContainer"
      >
        <span
          class="primaryLabel"
        >
          Some Label
        </span>
        <span
          class="secondaryLabel"
        >
          ·
        </span>
        <span
          class="secondaryLabel"
        >
          Secondary Label
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`Label horizontal layout render with tag 1`] = `
<body>
  <div>
    <div
      class="itemRowContainer"
    >
      <div
        class="labelsContainer horizontalContainer"
      >
        <span
          class="primaryLabel"
        >
          Some Label
        </span>
        <span
          class="secondaryLabel"
        >
          ·
        </span>
        <span
          class="secondaryLabel"
        >
          Secondary Label
        </span>
      </div>
      <span
        class="mia-platform-tag tag tagColorGrey"
      >
        Tag
      </span>
    </div>
  </div>
</body>
`;

exports[`Label vertical layout render label only 1`] = `
<body>
  <div>
    <div
      class="itemRowContainer"
    >
      <div
        class="labelsContainer verticalContainer"
      >
        <span
          class="primaryLabel strong"
        >
          Some Label
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`Label vertical layout render label only and danger 1`] = `
<body>
  <div>
    <div
      class="itemRowContainer"
    >
      <div
        class="labelsContainer verticalContainer"
      >
        <span
          class="primaryLabel danger strong"
        >
          Some Label
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`Label vertical layout render with danger and secondaryLabel 1`] = `
<body>
  <div>
    <div
      class="itemRowContainer"
    >
      <div
        class="labelsContainer verticalContainer"
      >
        <span
          class="primaryLabel danger strong"
        >
          Some Label
        </span>
        <span
          class="secondaryLabel danger"
        >
          Secondary Label
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`Label vertical layout render with secondaryLabel 1`] = `
<body>
  <div>
    <div
      class="itemRowContainer"
    >
      <div
        class="labelsContainer verticalContainer"
      >
        <span
          class="primaryLabel strong"
        >
          Some Label
        </span>
        <span
          class="secondaryLabel"
        >
          Secondary Label
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`Label vertical layout render with tag 1`] = `
<body>
  <div>
    <div
      class="itemRowContainer"
    >
      <div
        class="labelsContainer verticalContainer"
      >
        <span
          class="primaryLabel strong"
        >
          Some Label
        </span>
        <span
          class="secondaryLabel"
        >
          Secondary Label
        </span>
      </div>
      <span
        class="mia-platform-tag tag tagColorGrey"
      >
        Tag
      </span>
    </div>
  </div>
</body>
`;
